changes to scripts

--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
 
     <style>
         body{
-            background-image: url("../photos/bg.jpg");
+            background-image: url("./photos/bg.jpg");
             background-attachment: fixed;
             background-size: cover;
         }
