--- a/game.html
+++ b/game.html
@@ -20,7 +20,11 @@
     <div class='text-center'>
         <h1>GitGudClicker</h1>
     </div>
+    <div class='text-center'>
+        <button type="button" class="btn btn-dark" id='new-game'> Start New Game</button>
 
+        <button type="button" class="btn btn-dark" id='leaderboard-button'> Leaderboard</button>
+    </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
