database in prog

--- a/game.html
+++ b/game.html
@@ -21,9 +21,8 @@
         <h1>GitGudClicker</h1>
     </div>
     <div class='text-center'>
-        <button type="button" class="btn btn-dark" id='new-game'> Start New Game</button>
-
-        <button type="button" class="btn btn-dark" id='leaderboard-button'> Leaderboard</button>
+        <a class="btn btn-dark" href="index.html">Start another game</a>
+        <a class="btn btn-dark" href="leaderboard.html">Leaderboard</a>
     </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
