--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>GitGudClicker</title>
-        <script src="https://cdn.jsdelivr.net/npm/phaser@3.22.0/dist/phaser-arcade-physics.min.js"></script> 
-
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -14,6 +11,9 @@
         <script src="./scripts/game.js"></script>
         <script src="./scripts/controllers.js"></script>
         <script src="./scripts/data.js"></script>
+        <script src="./scripts/list-controllers.js"></script>
+        <script src="./scripts/list-model.js"></script>
+        <script src="./scripts/list-view.js"></script>
 
         <style>
             @font-face {
@@ -26,20 +26,22 @@
                 background-size: cover;
                 background-repeat: no-repeat;
                 font-family: pixelboy;
-                font-size: larger;
             }
+
             h1{
                 font-size: 75px;
             }
-            img {
-                display:block;
-            }
+
         </style>
     </head>
-    <body>    
-        <div id='view'></div>
+    <body onload="listControllers()">
+        <h1 class="text-center pt-5">Leaderboard</h1>
+        <div class="text-center">    
+            <button type="button" class="btn btn-dark" id='display'>Update and Display</button>
+            <a class="btn btn-dark" href="index.html">Start another game</a>
+            <ul id='leaderboardList'></ul>
+        </div>
         <img src="./photos/ad1.gif" class='float-right'>
         <img src="./photos/ad4.gif">
-        <img src="./photos/ad2.gif" class='mx-auto'>
     </body>
 </html>
